# aurum-datadiscovery

./: .gitignore  BQ_QUICKSTART.md  docker-compose.yml  pyproject.toml  requirements-lite.txt  requirements.txt
bq_profiler/: __init__.py  cli.py  connector.py  fix_es_ids.py  profiler.py  push_to_es.py
bq_profiler/configs/: example.yaml
knowledgerepr/: fieldnetwork.py  networkbuilder.py
modelstore/: elasticstore.py
